[package]
name = "amethyst-imgui"
version = "0.6.1"
description = "imgui library for amethyst"
license = "CC0-1.0"
authors = ["Awpteamoose <cargo@awpteamoose.my.to>", "Walter Pearce <jaynus@gmail.com>"]
repository = "https://github.com/jaynus/amethyst-imgui"
readme = "README.md"
edition = "2018"

[features]
default = ["amethyst/metal"]
shader-compiler = ["amethyst/shader-compiler"]
docking = []

[dependencies]
amethyst = { version = "0.15" }
imgui = { path = "./imgui-rs" }
imgui-winit-support = { path = "./imgui-rs/imgui-winit-support", features = ["winit-19"], default-features = false }

lazy_static = "1.4"
derivative = "1.0"
failure = "0.1"

[[example]]
name = "demo_window"
path = "examples/demo_window.rs"

[[example]]
name = "demo_overlay"
path = "examples/demo_overlay.rs"
